<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/activity_margin"
    android:baselineAligned="false"
    android:paddingRight="@dimen/activity_margin">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/input_nom"
        android:hint="@string/nom" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/input_prenom"
        android:hint="@string/prenom" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/input_email"
        android:hint="@string/email" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bar_height"
        android:layout_marginTop="10dp"
        android:text="Terminer"
        android:id="@+id/button_validate"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin" />
    <!--
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_menu"
        android:layout_marginTop="5dp"
        android:text="@string/disable_infos"
        android:id="@+id/checkBox"
        android:checked="false"
        android:layout_gravity="center_horizontal" />
        -->

</LinearLayout>