<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Organisation"
        android:ems="10"
        android:id="@+id/input_nom"
        android:layout_gravity="center"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="22dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/input_email"
        android:layout_gravity="center"
        android:hint="Email"
        android:layout_below="@+id/input_nom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/tipsy_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/input_password"
        android:layout_gravity="center"
        android:hint="Mot de passe"
        android:layout_below="@+id/input_email"
        android:layout_marginTop="16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/conditions"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/tableLayout"
        android:layout_centerHorizontal="true" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/activity_margin"
        android:columnOrderPreserved="false"
        android:useDefaultMargins="true"
        android:id="@+id/tableLayout">

        <TableRow android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="@dimen/bar_height"
                android:layout_weight="1"
                android:text="@string/inscription"
                android:id="@+id/button_signup"
                android:layout_span="2"
                android:layout_column="0"
                android:layout_margin="@dimen/ui_margin"
                android:src="@drawable/ic_action_done"
                android:background="@color/background2" />
        </TableRow>

        <TableRow android:layout_height="wrap_content">

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/bar_height"
                android:layout_weight="1"
                android:text="@string/connection"
                android:id="@+id/button_signin"
                android:layout_span="1"
                android:layout_column="0"
                android:layout_margin="@dimen/ui_margin" />

            <Button
                android:layout_width="0dp"
                android:layout_height="@dimen/bar_height"
                android:layout_weight="1"
                android:text="@string/later"
                android:id="@+id/button_later"
                android:layout_span="1"
                android:layout_column="1"
                android:layout_margin="@dimen/ui_margin" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
