<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_dark"
    android:clickable="true">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/activity_margin"
        android:weightSum="1"
        android:id="@+id/linearLayout2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/ic_action_group"
            android:layout_marginRight="@dimen/activity_margin" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="50/100"
                android:id="@+id/progressText"
                android:gravity="center" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ui_margin"
                android:id="@+id/progressBar"
                android:progress="50"
                android:indeterminate="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/menu_mode">

        <Button
            style="@style/ButtonCurrentMode"
            android:text="@string/nfc"
            android:id="@+id/button_nfc"
            android:drawableTop="@drawable/ic_action_network_wifi" />

        <Button
            style="@style/ButtonOtherMode"
            android:text="@string/qrcode"
            android:id="@+id/button_qrcode"
            android:drawableTop="@drawable/ic_action_location_found" />

        <Button
            style="@style/ButtonOtherMode"
            android:text="@string/liste"
            android:id="@+id/button_manuel"
            android:drawableTop="@drawable/ic_action_paste" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/menu_mode"
        android:layout_below="@+id/linearLayout2"
        android:id="@+id/content">

        <fragment
            android:id="@+id/sample"
            android:name="com.abhi.barcode.frag.libv2.BarcodeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:gravity="center"
        android:alpha="0.8"
        android:id="@+id/layout_ok"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ok" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/background_light"
            android:text="Entrée Normal"
            android:id="@+id/type_entree_ok"
            android:textSize="35dp"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/nom_ok"
            android:text="Eddy Donmarcel"
            android:textColor="@color/background_light"
            android:drawableLeft="@drawable/ic_action_person"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_below="@+id/type_entree"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:gravity="center"
        android:alpha="0.8"
        android:id="@+id/layout_already"
        android:visibility="gone"
        android:weightSum="1">

        <ImageView
            android:layout_width="111dp"
            android:layout_height="111dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cross" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/background_light"
            android:text="Entrée Normal"
            android:id="@+id/entree_already"
            android:textSize="35dp"
            android:textIsSelectable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/nom_already"
            android:text="Ella Danloss"
            android:textColor="@color/background_light"
            android:drawableLeft="@drawable/ic_action_person"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_below="@+id/type_entree"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

</RelativeLayout>