<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/event_flyer_height"
            android:id="@+id/imageView"
            android:src="@drawable/last_bg_flou"
            android:scaleType="centerCrop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/event_fade"
                android:alpha="0.3" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="@dimen/ui_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Ven 10 Jan"
                    android:id="@+id/date_event"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="3"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="true"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:autoText="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="23h00"
                    android:id="@+id/debut_event"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="3"
                    android:layout_below="@+id/date_event"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:gravity="right"
                    android:autoText="false" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frameLayout"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/event_fade"
                android:alpha="0.3" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="@dimen/ui_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="We Like To Party !"
                    android:id="@+id/nom_event"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="true"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="3"
                    android:textStyle="bold"
                    android:autoText="false"
                    android:gravity="left" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Queen Club"
                    android:id="@+id/lieu_event"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="3"
                    android:layout_below="@+id/nom_event"
                    android:layout_alignParentRight="false"
                    android:layout_alignParentEnd="true"
                    android:autoText="false"
                    android:gravity="left" />
            </LinearLayout>
        </FrameLayout>

    </RelativeLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/ui_margin">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/button_billetterie"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_button_height"
                android:layout_weight="1"
                android:layout_column="0"
                android:layout_span="1"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_card_blue"
                android:baselineAligned="true"
                android:layout_marginBottom="@dimen/ui_margin"
                android:layout_marginRight="@dimen/ui_margin">

                <ImageView
                    android:layout_width="@dimen/bar_height"
                    android:layout_height="@dimen/bar_height"
                    android:src="@drawable/ic_action_labels"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/billetterie"
                    android:textColor="@color/background_light"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/button_bar"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_button_height"
                android:layout_weight="1"
                android:layout_span="1"
                android:layout_column="1"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_card_blue"
                android:baselineAligned="true"
                android:layout_marginBottom="@dimen/ui_margin">

                <ImageView
                    android:layout_width="@dimen/bar_height"
                    android:layout_height="@dimen/bar_height"
                    android:src="@drawable/ic_action_view_as_list"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/bar"
                    android:textColor="@color/background_light"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_button_height"
                android:id="@+id/button_access"
                android:layout_weight="1"
                android:layout_span="1"
                android:layout_column="0"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_card_blue"
                android:baselineAligned="true"
                android:layout_marginBottom="@dimen/ui_margin"
                android:layout_marginRight="@dimen/ui_margin">

                <ImageView
                    android:layout_width="@dimen/bar_height"
                    android:layout_height="@dimen/bar_height"
                    android:src="@drawable/ic_action_paste"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mode_entree"
                    android:textColor="@color/background_light"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_button_height"
                android:id="@+id/button_infos"
                android:layout_weight="1"
                android:layout_column="1"
                android:layout_span="1"
                android:layout_gravity="top"
                android:gravity="center_vertical|center_horizontal"
                android:background="@drawable/bg_card_blue"
                android:baselineAligned="true"
                android:layout_marginBottom="@dimen/ui_margin">

                <ImageView
                    android:layout_width="@dimen/bar_height"
                    android:layout_height="@dimen/bar_height"
                    android:src="@drawable/ic_action_about"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/infos"
                    android:textColor="@color/background_light"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>